--- a/Minimal/Views/Shared/_LoginPartial.cshtml
+++ b/Minimal/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,29 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@using Minimal.Utility
 
-<ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
+    <div class="signed-in-box">
+        <div class="show-on-mobile">
+            <div class="user-title"><div>Hello,</div> @SD.Truncate("Chukwujekwu", 8)</div>
+        </div>
+        <div class="show-on-desktop">
+            <div class="user-title">Hello, @User.Identity.Name</div>
+        </div>
+        <div class="show-on-desktop">
+            <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="desktop-logout-button">Logout</button>
+            </form>
+        </div>
+    </div>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    <div class="user-icon">
+        <a class="user-icon-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <svg class="icon"><use xlink:href="/sprite.svg#icon-user"></use></svg>
+        </a>
+    </div>
 }
-</ul>
