--- a/Minimal/wwwroot/css/site.css
+++ b/Minimal/wwwroot/css/site.css
@@ -1,71 +1,238 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+:root{
+  --Josefin : 'Josefin Sans', sans-serif;
+  --Montserrat : 'Montserrat', sans-serif;
+  --primary-bg: #f5f5f5;
+  --secondary-bg: #ffffff;
+  --primary-text: #202020;
+  --secondary-text: #4c4c4c;
+  --text-size: 1.5rem;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+	line-height: 1;
 }
-.footer {
-  position: absolute;
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+.body.menu-open{
+  overflow: hidden;
+  transition: all .3s;
+}
+
+/* Site Container */
+.site-container{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
+.site-header{
+  grid-column: 1/-1;
+  font-family: var(--Josefin);
+  background: #f5f5f5;
+  color: var(--primary-text);
+}
+
+header{
+  padding-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand{
+  text-decoration: none;
+  font-size: 3rem;
+  color: inherit;
+  font-weight: 500;
+  z-index: 10;
+}
+
+nav.menu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 33.3%;
+}
+
+.nav-item{
+  list-style: none;
+}
+.nav-item a{
+  text-decoration: none;
+  color: var(--secondary-text);
+  font-size: var(--text-size);
+}
+
+.nav-item:hover a {
+  color: #000;
+  text-shadow: 1px 1px var(--secondary-text);
+}
+
+.header-right{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.auth{
+  margin-right: 1.5rem;
+}
+
+.body.menu-open .menu-overlay{
+  top: 0;
+  left: 0;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  display: flex;
+  z-index: 4;
+  position: fixed;
+  align-items: center;
+  touch-action: none;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-tap-highlight-color: transparent;
+}
+
+.signed-in-box{
+  font-size: var(--text-size);
+}
+
+.authmobile-container{
+  text-align: center;
+  padding-top: 4rem;
+  font-size: 2rem;
+}
+
+@media(max-width: 768px){
+  header{
+    padding-top: 1rem;
+  }
+
+  .brand{
+    font-size: 2.5rem;
+    transform: translateX(-10px);
+  }
+
+  .menu{
+    transition: all .3s;
+    background: var(--secondary-bg);
+    position: fixed;
+    width: 0;
+    display: none !important;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    transform: translateX(-10rem);
+  }
+  
+  .body.menu-open .menu{
+    height: 100vh;
+    width: 75vw;
+    display: flex !important;
+    transform: translateX(0);
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .nav-item {
+    margin-bottom: 4rem;
+  }
+
+  .nav-item a{
+    font-size: 2rem;
+  }
+
+  .signed-in-box{
+    font-size: 1.2rem;
+  }
+
+}
+
+
+/* HAMBRUGER */
+.ham {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 400ms;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 10;
+  position: relative;
+  transform: translateX(-12px);
+}
+.hamRotate.active {
+  transform: rotate(45deg) translate(-1.2rem, 1rem);
+}
+.hamRotate180.active {
+  transform: rotate(180deg);
+}
+.line {
+  fill:none;
+  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+  stroke: var(--primary-text);
+  stroke-width:3.5;
+  stroke-linecap:round;
+}
+.ham1 .top {
+  stroke-dasharray: 40 139;
+}
+.ham1 .bottom {
+  stroke-dasharray: 40 180;
+}
+.ham1.active .top {
+  stroke-dashoffset: -98px;
+}
+.ham1.active .bottom {
+  stroke-dashoffset: -138px;
 }
