build sub hero section

--- a/Minimal/Areas/Customer/Views/Home/Index.cshtml
+++ b/Minimal/Areas/Customer/Views/Home/Index.cshtml
@@ -2,7 +2,56 @@
     ViewData["Title"] = "Home Page";
 }
 
-@* <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div> *@
+<div class="hero">
+    <div class="container">
+        <div class="hero-content">
+            <div class="text-column">
+                <h1 class="store-heading">Minimal</h1>
+                <div class="show-on-desktop">
+                    <h2 class="store-owner">By Nnaji Victor</h2>
+                    <a href="#" class="btn shop-button">Shop Now</a>
+                </div>
+            </div>
+            <div class="image-column">
+                <img src="~/images/hero-image.png" alt="sofa" class="hero-image">
+            </div>
+        </div>
+        <div class="show-on-mobile hero-text-mobile">
+            <h2 class="store-owner">By Nnaji Victor</h2>
+            <a href="#" class="btn shop-button">Shop Now</a>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="sub-hero">
+        <div class="sub-hero__items">
+            <div class="sub-hero__item illustration">
+                <img src="~/images/deliver.png" alt="shipping icon">
+            </div>
+            <div class="sub-hero__item title">Free Shipping</div>
+            <div class="sub-hero__item description">Order over ₦30,000</div>
+        </div>
+        <div class="sub-hero__items">
+            <div class="sub-hero__item illustration">
+                <img src="~/images/refund.png" alt="refund icon">
+            </div>
+            <div class="sub-hero__item title">90 Days Return</div>
+            <div class="sub-hero__item description">For goods issues</div>
+        </div>
+        <div class="sub-hero__items">
+            <div class="sub-hero__item illustration">
+                <img src="~/images/secure.png" alt="secure icon">
+            </div>
+            <div class="sub-hero__item title">Secure Payments</div>
+            <div class="sub-hero__item description">100% secure & safe</div>
+        </div>
+        <div class="sub-hero__items">
+            <div class="sub-hero__item illustration">
+                <img src="~/images/call.png" alt="support icon">
+            </div>
+            <div class="sub-hero__item title">24/7 Support Help</div>
+            <div class="sub-hero__item description">Dedicated Support</div>
+        </div>
+    </div>
+</div>
