--- a/Minimal/Views/Shared/_Layout.cshtml
+++ b/Minimal/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body class="body">
     <div class="menu-overlay"></div>
-    <div class="site-container">
+    <div class="site">
         <section class="site-header">
             <div class="container">
                 <header class="header">
@@ -42,19 +42,17 @@
                     
                     <div class="header-right">
                         <div class="auth"><partial name="_LoginPartial" /></div>
-                        <div class="cart">
+                        <a class="cart" asp-area="" asp-page="" title="Cart">
                             <svg class="icon icon-shopping-cart"><use xlink:href="/sprite.svg#icon-shopping-cart"></use></svg>
-                        </div>
+                        </a>
                     </div>
                 </header>
             </div>
         </section>
 
-        <div class="container">
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
-        </div>
+        <section class="site-body">
+            @RenderBody()
+        </section>
 
         @* <footer class="border-top footer text-muted">
             <div class="container">
