--- a/Minimal/wwwroot/css/admin.css
+++ b/Minimal/wwwroot/css/admin.css
@@ -4,6 +4,10 @@
     height: 100%;
 }
 
+body{
+    font-family: var(--Josefin);
+}
+
 .admin{
     background: var(--primary-bg);
 }
@@ -66,6 +70,23 @@
 }
 .body-content{
     background: green;
+}
+
+.nav-item{
+    margin-bottom: 2rem;
+}
+
+.nav-link{
+    display: flex;
+    align-items: center;
+    font-size: 2rem;
+}
+
+.nav-icon{
+    margin-right: 1rem;
+}
+.icon{
+    fill: currentColor;
 }
 
 
