--- a/Minimal/wwwroot/css/admin.css
+++ b/Minimal/wwwroot/css/admin.css
@@ -62,6 +62,7 @@ body{
     background: var(--primary-bg);
     position: sticky;
     height: calc(100vh - 6rem);
+    border-right: 1.5px solid var(--secondary-bg);
 }
 .sidebar-content{
     display: flex;
@@ -69,7 +70,7 @@ body{
     padding-top: 3rem;
 }
 .body-content{
-    background: green;
+    padding: 5rem 1.5rem;
 }
 
 .nav-item{
@@ -87,6 +88,23 @@ body{
 }
 .icon{
     fill: currentColor;
+}
+
+/* .category-container{
+    background: var(--secondary-bg);
+} */
+
+.category-title{
+    padding: 3rem;
+    font-size:3rem;
+    font-family: var(--Josefin);
+    color: var(--primary-text);
+    text-transform: uppercase;
+    background: var(--secondary-bg);
+}
+
+.category-table{
+    margin-top: 5rem;
 }
 
 
@@ -133,5 +151,18 @@ body{
     .sidebar-content{
         padding-top: 5rem;
         align-items: center;
+    }
+
+    .body-content{
+        padding: 3rem 0rem;
+    }
+
+    .category-title{
+        font-size: 2rem;
+        padding: 3rem 1.5rem;
+    }
+
+    .category-table{
+        margin-top: 2rem;
     }
 }
