--- a/Minimal/wwwroot/css/utilities.css
+++ b/Minimal/wwwroot/css/utilities.css
@@ -187,6 +187,13 @@ html{
   font-size: 1.5rem;
   border: none;
   font-family: var(--Josefin);
+  box-sizing: content-box;
+}
+
+.mobile-logout-button:hover{
+  background: transparent;
+  color: var(--primary-text);
+  border: 1px solid var(--primary-text);
 }
 
 .desktop-logout-button{
@@ -211,4 +218,82 @@ html{
 .btn:hover{
   background: var(--primary-text);
   color: var(--secondary-bg);
+}
+
+.modal-close{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 35px;
+  height: 30px;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+}
+
+.modal-mask{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(52, 73, 94, 0.8);
+  z-index: 50;
+  visibility: hidden;
+  
+  opacity: 0;
+  
+  transition: 0.7s;
+}
+
+.modal{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background: var(--secondary-bg);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s ease;
+  transform: translateY(0);
+}
+
+
+.modal-active{
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-active + .modal{
+  visibility: visible;
+  opacity: 1;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 75vh;
+}
+
+.modal-body{
+  /* background: red; */
+  padding: 4rem;
+  height: 100%;
+}
+
+.modal-title{
+  font-size: 3rem;
+  text-transform: capitalize;
+  margin-bottom: 3rem;
+}
+
+@media(max-width: 768px){
+  .modal-body{
+    padding: 5rem 1.5rem 0;
+  }
+
+  .modal-title{
+    font-size: 2rem;
+    text-align: center;
+  }
 }
